--- a/trunk/07.SourceCode/08.MoneyPacificService/08.MoneyPacificService/08.MoneyPacificService.csproj
+++ b/trunk/07.SourceCode/08.MoneyPacificService/08.MoneyPacificService/08.MoneyPacificService.csproj
@@ -57,9 +57,14 @@
     <Content Include="App_Data\MoneyPacific_log.ldf">
       <DependentUpon>MoneyPacific.mdf</DependentUpon>
     </Content>
-    <Content Include="App_Data\PacificCodeR.xml" />
+    <Content Include="App_Data\PacificCodeR.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="MainService.svc" />
     <Content Include="Service1.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -72,8 +77,13 @@
     <Compile Include="BUS\CustomerBUS.cs" />
     <Compile Include="BUS\CustomerStatusBUS.cs" />
     <Compile Include="BUS\GeneratorBUS.cs" />
+    <Compile Include="IMainService.cs" />
+    <Compile Include="MainService.svc.cs">
+      <DependentUpon>MainService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="MessageManager.cs" />
     <Compile Include="BUS\MoneyCardBUS.cs" />
-    <Compile Include="BUS\MoneyPacificCore.cs" />
+    <Compile Include="MoneyPacificCore.cs" />
     <Compile Include="BUS\PacificCodeBUS.cs" />
     <Compile Include="BUS\PacificCodeStatusBUS.cs" />
     <Compile Include="BUS\StoreBUS.cs" />
@@ -102,6 +112,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="DTO\DBMoneyPacific.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>DBMoneyPacific.designer.cs</LastGenOutput>
@@ -109,15 +125,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="DTO\DBMoneyPacific.dbml.layout">
       <DependentUpon>DBMoneyPacific.dbml</DependentUpon>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Util\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -126,8 +136,8 @@
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>2253</DevelopmentServerPort>
+          <AutoAssignPort>False</AutoAssignPort>
+          <DevelopmentServerPort>2222</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
