--- a/trunk/07.SourceCode/08.MoneyPacificService/08.MoneyPacificService/Web.config
+++ b/trunk/07.SourceCode/08.MoneyPacificService/08.MoneyPacificService/Web.config
@@ -26,3 +26,6 @@
   </system.webServer>
   
 </configuration>
+
+<!--add name="MoneyPacificConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MoneyPacific.mdf;Integrated Security=True;User Instance=True"
+      providerName="System.Data.SqlClient" /-->
