--- a/trunk/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
+++ b/trunk/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
@@ -18,6 +18,8 @@
   <connectionStrings>
     <add name="MoneyPacificConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MoneyPacific.mdf;Integrated Security=True;User Instance=True"
       providerName="System.Data.SqlClient" />
+    <add name="MoneyPacific03ConnectionString" connectionString="Data Source=ALEX-PC\;Initial Catalog=MoneyPacific03;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true">
