--- a/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
+++ b/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
@@ -4,6 +4,10 @@
 	<connectionStrings>
   <add name="MoneyPacificConnectionString" connectionString="Data Source=localhost;Initial Catalog=MoneyPacific;Persist Security Info=True;User ID=sa;Password=admin"
    providerName="System.Data.SqlClient" />
+  <add name="MoneyPacificConnectionString1" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MoneyPacific.mdf;Integrated Security=True;User Instance=True"
+   providerName="System.Data.SqlClient" />
+  <add name="MoneyPacificConnectionString2" connectionString="Data Source=ALEX-PC;Initial Catalog=MoneyPacific;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0">
