--- a/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/MoneyPacificSrv.csproj
+++ b/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/MoneyPacificSrv.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Language.xml" />
+    <Content Include="App_Data\Language.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="App_Data\MoneyPacific.mdf" />
     <Content Include="App_Data\MoneyPacific_log.ldf">
       <DependentUpon>MoneyPacific.mdf</DependentUpon>
