--- a/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
+++ b/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
@@ -1,14 +1,12 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="Windows-1252" ?>
 <configuration>
 	<appSettings/>
 	<connectionStrings>
-  <add name="MoneyPacificConnectionString" connectionString="Data Source=localhost;Initial Catalog=MoneyPacific;Persist Security Info=True;User ID=sa;Password=admin"
-   providerName="System.Data.SqlClient" />
-  <add name="MoneyPacificConnectionString1" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MoneyPacific.mdf;Integrated Security=True;User Instance=True"
-   providerName="System.Data.SqlClient" />
-  <add name="MoneyPacificConnectionString2" connectionString="Data Source=ALEX-PC;Initial Catalog=MoneyPacific;Integrated Security=True"
+  <add name="MoneyPacificConnectionString" connectionString="Data Source=Alex-PC;Initial Catalog=MoneyPacific;Persist Security Info=True;User ID=sa;Password=admin"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
+  <!--add name="MoneyPacificConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MoneyPacific.mdf;Integrated Security=True;User Instance=True"
+   providerName="System.Data.SqlClient" /-->
 	<system.web>
 		<compilation debug="true" targetFramework="4.0">
 		</compilation>
@@ -36,47 +34,37 @@
       Information Services 7.0.  It is not necessary for previous version of IIS.
   -->
 	<system.serviceModel>
-		<services>
-			<service behaviorConfiguration="MoneyPacificSrv.Service1Behavior" name="MoneyPacificSrv.Service1">
-				<endpoint address="" binding="wsHttpBinding" contract="MoneyPacificSrv.IService1">
-					<identity>
-						<dns value="localhost"/>
-					</identity>
-				</endpoint>
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-			</service>
-			<service behaviorConfiguration="MoneyPacificSrv.MainBehavior" name="MoneyPacificSrv.Main">
-				<endpoint address="" binding="wsHttpBinding" contract="MoneyPacificSrv.IMain">
-					<identity>
-						<dns value="localhost"/>
-					</identity>
-				</endpoint>
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-			</service>
-			<service behaviorConfiguration="MoneyPacificSrv.MoneyPacificBehavior" name="MoneyPacificSrv.MoneyPacific">
-				<endpoint address="" binding="wsHttpBinding" contract="MoneyPacificSrv.IMoneyPacific">
-					<identity>
-						<dns value="localhost"/>
-					</identity>
-				</endpoint>
-				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-			</service>
-		</services>
+		<bindings>
+   <basicHttpBinding>
+    <binding name="MyBasicHttpBinding">
+     <security>
+      <transport clientCredentialType="Basic" />
+     </security>
+    </binding>
+   </basicHttpBinding>
+  </bindings>
+  <services>
+   <service behaviorConfiguration="MoneyPacificSrv.MainBehavior"
+    name="MoneyPacificSrv.Main">
+    <endpoint address="" binding="basicHttpBinding" bindingConfiguration="MyBasicHttpBinding"
+     contract="MoneyPacificSrv.IMain">
+     <identity>
+      <dns value="localhost" />
+     </identity>
+    </endpoint>
+    <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+   </service>
+  </services>
+    
 		<behaviors>
 			<serviceBehaviors>
-				<behavior name="MoneyPacificSrv.Service1Behavior">
-					<serviceMetadata httpGetEnabled="true"/>
-					<serviceDebug includeExceptionDetailInFaults="false"/>
-				</behavior>
-				<behavior name="MoneyPacificSrv.MainBehavior">
+    
+        <behavior name="MoneyPacificSrv.MainBehavior">
 					<serviceMetadata httpGetEnabled="true"/>
 					<serviceDebug includeExceptionDetailInFaults="true"/>
 				</behavior>
-				<behavior name="MoneyPacificSrv.MoneyPacificBehavior">
-					<serviceMetadata httpGetEnabled="true"/>
-					<serviceDebug includeExceptionDetailInFaults="false"/>
-				</behavior>
-			</serviceBehaviors>
+				
+    	</serviceBehaviors>
 		</behaviors>
 	</system.serviceModel>
 </configuration>
