--- a/trunk/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/MoneyPacificSrv.csproj
+++ b/trunk/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/MoneyPacificSrv.csproj
@@ -114,6 +114,7 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App.config" />
     <None Include="DTO\DBMoneyPacific.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>DBMoneyPacific.designer.cs</LastGenOutput>
