--- a/07.SourceCode/P9_CallMoneyPacificSrv/P9_CallMoneyPacificSrv/app.config
+++ b/07.SourceCode/P9_CallMoneyPacificSrv/P9_CallMoneyPacificSrv/app.config
@@ -1,28 +1,30 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <system.serviceModel>
-        <bindings>
-            <wsHttpBinding>
-                <binding name="WSHttpBinding_IMain" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
-                    <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
-                    <security mode="Message">
-                        <transport clientCredentialType="Windows" proxyCredentialType="None" realm="">
-                            <extendedProtectionPolicy policyEnforcement="Never"/>
-                        </transport>
-                        <message clientCredentialType="Windows" negotiateServiceCredential="true" algorithmSuite="Default" establishSecurityContext="true"/>
-                    </security>
-                </binding>
-            </wsHttpBinding>
-        </bindings>
-        <client>
-          <!-- svcutil.exe http://alex-pc/Main.svc?wsdl -->
-          <!-- svcutil.exe http://localhost:2000/Main.svc?wsdl -->
-            <endpoint address="http://localhost:2000/Main.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IMain" contract="IMain" name="WSHttpBinding_IMain">
-                <identity>
-                    <dns value="localhost"/>
-                </identity>
-            </endpoint>
-        </client>
-    </system.serviceModel>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IMain" closeTimeout="00:01:00"
+            openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+            allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+            maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+            messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+            useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="None">
+            <transport clientCredentialType="None" proxyCredentialType="None"
+                realm="">
+              <extendedProtectionPolicy policyEnforcement="Never" />
+            </transport>
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:2000/Main.svc" binding="basicHttpBinding"
+          bindingConfiguration="BasicHttpBinding_IMain" contract="IMain"
+          name="BasicHttpBinding_IMain" />
+    </client>
+  </system.serviceModel>
+</configuration>
