--- a/07.SourceCode/01.MVCSkill/MvcMusicStore06/MvcMusicStore06/Web.config
+++ b/07.SourceCode/01.MVCSkill/MvcMusicStore06/MvcMusicStore06/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- 
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -9,7 +9,10 @@
 -->
 <configuration>
   <appSettings />
-  <connectionStrings><add name="MvcMusicStoreContainer" connectionString="metadata=res://*/Models.MvcMusicStore.csdl|res://*/Models.MvcMusicStore.ssdl|res://*/Models.MvcMusicStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MvcMusicStore.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="MvcMusicStoreEntities" connectionString="metadata=res://*/Models.MvcMusicStore.csdl|res://*/Models.MvcMusicStore.ssdl|res://*/Models.MvcMusicStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MvcMusicStore.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="MvcMusicStoreContainer" connectionString="metadata=res://*/Models.MvcMusicStore.csdl|res://*/Models.MvcMusicStore.ssdl|res://*/Models.MvcMusicStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MvcMusicStore.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="MvcMusicStoreEntities" connectionString="metadata=res://*/Models.MvcMusicStore.csdl|res://*/Models.MvcMusicStore.ssdl|res://*/Models.MvcMusicStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MvcMusicStore.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <!-- 
             Set compilation debug="true" to insert debugging 
@@ -46,11 +49,13 @@
         <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" applicationName="/" />
       </providers>
     </profile>
-    <roleManager enabled="false">
+    <roleManager enabled="true">
       <providers>
         <clear />
-        <add connectionStringName="ApplicationServices" applicationName="/" name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-        <add applicationName="/" name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add connectionStringName="ApplicationServices" applicationName="/"
+          name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add applicationName="/" name="AspNetWindowsTokenRoleProvider"
+          type="System.Web.Security.WindowsTokenRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </providers>
     </roleManager>
     <!--
@@ -76,7 +81,6 @@
       </namespaces>
     </pages>
   </system.web>
-  <system.web.extensions />
   <!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
