--- a/07.SourceCode/P4_MoneyPacificSite/P4_MoneyPacificSite/P4_MoneyPacificSite.csproj
+++ b/07.SourceCode/P4_MoneyPacificSite/P4_MoneyPacificSite/P4_MoneyPacificSite.csproj
@@ -69,16 +69,24 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\HtmlHelpers.cs" />
+    <Compile Include="Models\BUS\CustomerBUS.cs" />
+    <Compile Include="Models\BUS\CustomerStatusBUS.cs" />
     <Compile Include="Models\BUS\PacificCodeBUS.cs" />
+    <Compile Include="Models\BUS\TransactionBUS.cs" />
+    <Compile Include="Models\DAO\CustomerDAO.cs" />
+    <Compile Include="Models\DAO\CustomerStatusDAO.cs" />
     <Compile Include="Models\DAO\PacificCodeDAO.cs" />
+    <Compile Include="Models\DAO\TransactionDAO.cs" />
     <Compile Include="Models\Mail.cs" />
     <Compile Include="Models\MoneyPacific.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MoneyPacific.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\PacificCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilators\MKMail.cs" />
+    <Compile Include="Utilators\MPMail.cs" />
     <Compile Include="ViewModels\MessageViewViewModel.cs" />
     <Compile Include="ViewModels\PacificCodeChangeCodeViewModel.cs">
       <SubType>Code</SubType>
@@ -133,18 +141,17 @@
     <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="Models\MoneyPacific.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MoneyPacific.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\Shared\Site.Master" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EntityDeploy Include="Models\MoneyPacific.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>MoneyPacific.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
