--- a/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
+++ b/07.SourceCode/MoneyPacificSrv/MoneyPacificSrv/Web.config
@@ -4,6 +4,8 @@
 	<connectionStrings>
   <add name="MoneyPacificConnectionString" connectionString="Data Source=192.168.10.12;Initial Catalog=MoneyPacific;Persist Security Info=True;User ID=sa;Password=admin"
    providerName="System.Data.SqlClient" />
+  <add name="MoneyPacificConnectionString1" connectionString="Data Source=Alex-PC;Initial Catalog=MoneyPacific;Persist Security Info=True;User ID=sa;Password=admin"
+   providerName="System.Data.SqlClient" />
  </connectionStrings>
   <!--add name="MoneyPacificConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\MoneyPacific.mdf;Integrated Security=True;User Instance=True"
    providerName="System.Data.SqlClient" /-->
